fix: style ordering to ensure whitespace is wrapped on calltree

--- a/log-viewer/resources/css/DatabaseView.scss
+++ b/log-viewer/resources/css/DatabaseView.scss
@@ -104,7 +104,7 @@ input[type='checkbox'] {
   vertical-align: middle;
 }
 
-.datagrid-textarea {
+.tabulator-cell.datagrid-textarea {
   white-space: pre-wrap;
   overflow-wrap: break-word;
 }
